# claw-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/clients/: elasticsearch_client.py
app/common/: response.py  response_code.py
app/config/: __init__.py  logging_config.py  settings.py
app/core/agent/: agent_manager.py  agent_prompt.py  conversation_manager.py  deep_agent.py  prompts.py
app/core/chat/: chat_memory_manager.py  conversation_manager.py  session_db.py  session_manager.py  session_service.py
app/core/model/: chat_model.py  db_model.py
app/core/models/: chat.py  responses.py
app/core/skill/: detect_malicious_skill.py  skill_loader.py  skill_manager.py
app/core/tool/: __init__.py  command_execute.py  doc_parser.py  file_edit.py  file_read.py  file_search.py  file_write.py  search_data.py  web_fetch.py  web_search.py
app/core/tool/base/: base_elasticsearch_tool.py
app/core/tool/mcp/: mcp_adapter.py  mcp_client.py
app/core/websocket/: websocket_manager.py
app/service/: database_manager.py  database_service.py  es_query_service.py  message_service.py  session_service.py
app/test/: ddgs_test.py
app/utils/: async_utils.py
app/web/: dependencies.py
app/web/middlewares/: error_handler.py
app/web/routers/: __init__.py  chat_router.py  health_router.py  query_router.py  session_router.py  tool_router.py
src/: app.py
src/clients/: elasticsearch_client.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: skill_loader.py  websocket_manager.py
src/core/agent/: conversation_manager.py  progressive_agent.py
src/core/models/: chat.py  responses.py
src/core/tools/: __init__.py  base_elasticsearch_tool.py  elasticsearch_tools.py  es_search_data_tool.py  file_read_tool.py  mcp_adapter.py  mcp_client.py  script_execute_tool.py
src/services/: es_query_service.py
src/skills/data-search/: SKILL.md
src/skills/data-search/references/: enum_values.md  (+1 more)
src/skills/log-alert-explain/: SKILL.md
src/skills/report-generate/: SKILL.md
src/utils/: command_executor.py  validators.py
src/web/routers/: __init__.py  query_router.py  tool_router.py
src/web/routes/: __init__.py  chat_routes.py  health_routes.py  query_routes.py  tool_routes.py
webui/: chat.html
workspace/skills/alert-log-explain/: SKILL.md
workspace/skills/data-search/: SKILL.md
workspace/skills/report-generate/: SKILL.md
workspace/skills/website-risk-analysis/: SKILL.md
(+3 files in other folders)
