[project]
name = "claw-agent"
version = "0.1.0"
description = "A simple AI agent"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi==0.122.0",
    "uvicorn==0.38.0",
    "python-multipart==0.0.12",
    "sse-starlette==2.0.0",
    # LangChain & LangGraph
    "langchain==1.2.15",
    "langchain-openai==1.0.0",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.1",
    "langgraph-checkpoint-postgres==3.0.5",
    "langchain-mcp-adapters==0.1.13",
    "deepagents==0.4.12",
    "pydantic-ai-backend[docker]==0.1.14",
    # MCP
    "mcp==1.20.0",
    # Database
    "sqlalchemy==2.0.44",
    "elasticsearch==7.16.2",
    # HTTP & Networking
    "httpx==0.28.1",
    "websockets==13.0",
    # Utils
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
    "python-frontmatter==1.1.0",
    "ddgs==9.14.1",
    # docs parser
    "pymupdf==1.27.2.2",
    "olefile==0.47",
    "defusedxml==0.7.1",
    "markitdown==0.1.5",
    "markdown==3.10.2",
    "jinja2==3.1.6",
]